cluster/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debugger
spec:
  containers:
    - name: debugger
      image: ubuntu:24.04
      imagePullPolicy: IfNotPresent
      command:
        - /bin/bash
        - -c
        - "sleep infinity"
  restartPolicy: Always
